Fixed errors with SSL

--- a/ChromePdf/ChromePdf.csproj
+++ b/ChromePdf/ChromePdf.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderProcessMessageHandler.cs" />
-    <Compile Include="WebHelpers.cs" />
+    <Compile Include="WebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
