Fixed issues with encoding and accuracy.

--- a/ChromePdf/packages.config
+++ b/ChromePdf/packages.config
@@ -5,6 +5,9 @@
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net45" />
   <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net45" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
+  <package id="Fizzler" version="1.0.0" targetFramework="net452" />
+  <package id="Fizzler.Systems.HtmlAgilityPack" version="1.0.0" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.6.5" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="SuperSocket.ClientEngine.Core" version="0.8.0.14" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.15.0" targetFramework="net452" />
