--- a/ChromePdf/App.config
+++ b/ChromePdf/App.config
@@ -17,6 +17,10 @@
         <assemblyIdentity name="SuperSocket.ClientEngine" publicKeyToken="ee9af13f57f00acc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.8.0.14" newVersion="0.8.0.14" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5.0" newVersion="1.6.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
