--- a/ChromePdf/packages.config
+++ b/ChromePdf/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net45" />
-  <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net45" />
-  <package id="CefSharp.Common" version="57.0.0" targetFramework="net45" />
-  <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net45" />
+  <package id="cef.redist.x64" version="3.3578.1863" targetFramework="net452" />
+  <package id="cef.redist.x86" version="3.3578.1863" targetFramework="net452" />
+  <package id="CefSharp.Common" version="71.0.0" targetFramework="net452" />
+  <package id="CefSharp.OffScreen" version="71.0.0" targetFramework="net452" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="Fizzler" version="1.0.0" targetFramework="net452" />
   <package id="Fizzler.Systems.HtmlAgilityPack" version="1.0.0" targetFramework="net452" />
+  <package id="Ghostscript.NET" version="1.2.1" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.6.5" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net452" />
   <package id="SuperSocket.ClientEngine.Core" version="0.8.0.14" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.15.0" targetFramework="net452" />
 </packages>
