--- a/ChromePdf/App.config
+++ b/ChromePdf/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ChromePdf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -30,8 +30,8 @@
   </runtime>
   <applicationSettings>
     <ChromePdf.Properties.Settings>
-      <setting name="Debug" serializeAs="String">
-        <value>False</value>
+      <setting name="LogSeverity" serializeAs="String">
+        <value>Disable</value>
       </setting>
     </ChromePdf.Properties.Settings>
   </applicationSettings>
