--- a/ChromePdf/ChromePdf.csproj
+++ b/ChromePdf/ChromePdf.csproj
@@ -102,6 +102,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Certificates.cs" />
     <Compile Include="ChromePdfOptions.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Program.cs" />
