--- a/ChromePdf/Properties/Settings.settings
+++ b/ChromePdf/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ChromePdf.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Debug" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="LogSeverity" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Verbose</Value>
     </Setting>
   </Settings>
 </SettingsFile>
